# Rust-P2P-Blockchain

./: .gitignore  Cargo.toml
.cache/replit/: __replit_disk_meta.json
.cache/replit/modules/: rust-stable:v3-20231201-3b22c78.res
.cache/replit/nix/: env.json
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: async-trait-0.1.75.crate  cpufeatures-0.2.11.crate  crypto-0.5.1.crate  libc-0.2.151.crate  serde-1.0.193.crate  serde_derive-1.0.193.crate  serde_json-1.0.108.crate  sha256-1.4.0.crate  syn-2.0.42.crate
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/ab/_g/: ab_glyph  ab_glyph_rasterizer
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/as/yn/: async-trait
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/bi/tf/: bitflags
.cargo/registry/index/index.crates.io-6f17d22bba15001f/.cache/bl/oc/: block-buffer
.cargo/registry/src/index.crates.io-6f17d22bba15001f/async-trait-0.1.75/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/crypto-0.5.1/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/libc-0.2.151/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/proc-macro2-1.0.70/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/sha256-1.4.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/syn-2.0.42/: .cargo_vcs_info.json  Cargo.toml
src/: block.rs  blockchain.rs  main.rs  node.rs  transaction.rs  utxo.rs
(+21 files in other folders)
